using unit test directory for any unit test code. Keeping a single, unified directory

--- a/math/geometry/Makefile
+++ b/math/geometry/Makefile
@@ -1,21 +1,13 @@
 
 SOURCES = src/Vector.cpp \
 	      src/Quaternion.cpp \
-		  src/test/Logger.cpp \
-		  src/test/Color.cpp \
-		  src/test/Assert.cpp
+		  ../../unit_test/src/*.cpp
 
 HEADERS = src/Vector.h \
 	      src/Quaternion.h \
-	      src/test/Logger.h \
-   	      src/test/Color.h \
-		  src/test/Assert.h
+		  ../../unit_test/src/*.0
 
-OBJECTS = build/Vector.o \
-	      build/Quaternion.o \
-		  build/Logger.o \
-		  build/Color.o \
-		  build/Assert.o
+OBJECTS = build/*.o
 
 test:	
 	g++ src/unit_test.cpp $(SOURCES) -o unit_test
