gdal loading library is almost ready for OpenCV

--- a/geographic/Makefile
+++ b/geographic/Makefile
@@ -6,6 +6,9 @@ TEST_HEADERS = $(TEST_DIR)/src
 
 TEST_INCLUDE = -I$(TEST_HEADERS)
 
+GDAL_LIBS = -L/usr/local/lib -lgdal
+GDAL_INCLUDE = -I/usr/local/include
+
 SOURCES = src/structures/*.cpp \
 		  $(TEST_SOURCES)
 
@@ -16,5 +19,6 @@ OBJECTS = build/*.o
 
 
 test: $(HEADERS)
-	g++ unit_test.cpp $(SOURCES) -o unit_test $(TEST_INCLUDE) `pkg-config opencv --cflags --libs`
-	./unit_test
+	g++ unit_test.cpp $(SOURCES) -o unit_test $(GDAL_INCLUDE) $(TEST_INCLUDE) `pkg-config opencv --cflags --libs` $(GDAL_LIBS) -g
+	
+	
