--- a/geographic/Makefile
+++ b/geographic/Makefile
@@ -10,9 +10,13 @@ GDAL_LIBS = -L/usr/local/lib -lgdal
 GDAL_INCLUDE = -I/usr/local/include
 
 SOURCES = src/structures/*.cpp \
+		  src/utilities/*.cpp \
+		  ../opencv/*.cpp \
 		  $(TEST_SOURCES)
 
 HEADERS = src/structures/*.h \
+		  src/utilities/*.h \
+		  ../opencv/*.h \
 		  $(TEST_HEADERS)/*.h
 
 OBJECTS = build/*.o
@@ -20,5 +24,5 @@ OBJECTS = build/*.o
 
 test: $(HEADERS)
 	g++ unit_test.cpp $(SOURCES) -o unit_test $(GDAL_INCLUDE) $(TEST_INCLUDE) `pkg-config opencv --cflags --libs` $(GDAL_LIBS) -g
-	
-	
+	./unit_test
+
