major makefile revision

--- a/geographic/Makefile
+++ b/geographic/Makefile
@@ -1,30 +1,58 @@
-# Unit test library data
+######################################################
+#	 Makefile for GeoImage   -   MacOSX Validated    #
+######################################################
+#  RELEVANT LIBRARY FLAGS
+
+# Final Install Destination
+PREFIX = /Users/marvinsmith/local
+
+#Build directory
+BUILD = build
+
+# Build flags 
+CFLAGS = -g -Wall -fPic
+
+
+#
+# GDAL LIBRARY
+#
+GDAL_LIBS 		= -L/opt/local/lib -lgdal
+GDAL_INCLUDE 	= -I/opt/local/include
+GDAL         	= $(GDAL_LIBS) $(GDAL_INCLUDE)
+
+
+#
+# OpenCV Libraries
+#
+OPENCV = `pkg-config opencv --cflags --libs`
+OPENCV_INCLUDE = `pkg-config opencv --cflags`
+
+
+#
+# Boost Libraries
+#
+BOOST_INCLUDE = -I/opt/local/include
+BOOST_LIBS    = -L/opt/local/lib -lboost_filesystem -lboost_system
+BOOST		  = $(BOOST_INCLUDE) $(BOOST_LIBS)
+
+
+#
+#  Unit Test Library
 #
 TEST_SOURCES = ../unit_test/src/Assert.cpp \
 			   ../unit_test/src/Logger.cpp \
 			   ../unit_test/src/Color.cpp \
 			   ../useful_stuff/string_functions/string_utilities.cpp
 
-TEST_INCLUDE = ../unit_test/src \
+TEST_HEADER  = ../unit_test/src \
 			   ../useful_stuff/string_functions
 
+TEST_INCLUDE = -I../unit_test/src -I../useful_stuff/string_functions
+TEST = $(TEST_INCLUDE) $(TEST_SOURCES)
 
-# GDAL LIBRARY
-GDAL_LIBS 		= -L/usr/local/lib -lgdal
-GDAL_INCLUDE 	= -I/usr/local/include
-GDAL         	= $(GDAL_LIBS) $(GDAL_INCLUDE)
-
-# OpenCV Libraries
-OPENCV = `pkg-config opencv --cflags --libs`
-OPENCV_INCLUDE = `pkg-config opencv --cflags`
-
-# Boost Libraries
-BOOST_INCLUDE = -I/usr/local/include
-BOOST_LIBS    = -L/usr/local/lib -lboost_filesystem -lboost_system
-BOOST		  = $(BOOST_INCLUDE) $(BOOST_LIBS)
-
-
+#
 # Geographic NITF Libraries
+#
 HEADERS = src/structures/*.h \
 	  	   src/utilities/*.h
 
@@ -37,40 +65,43 @@ OBJECTS = build/GeoImage.o \
 		  build/UInt8.o \
 		  build/GeoHeader.o
 
-CFLAGS = -g -Wall
+GEO_INCLUDE = -Isrc/structures -Isrc/utilities
+
+
+all: $(BUILD)/libgeoimage.so
 
 ###################################################################
 #				BUILD SEQUENCE		
 ###################################################################
-unit_test: unit_test.cpp $(TEST_INCLUDE) $(OBJECTS)
-	g++ unit_test.cpp -o unit_test $(OPENCV) $(GDAL) $(BOOST) $(TEST_SOURCES) $(OBJECTS) $(CFLAGS)
+$(BUILD)/libgeoimage.so: $(OBJECTS)
+	g++ -o $@ $(OBJECTS) $(GDAL) $(OPENCV) $(BOOST) -shared
 
 build/GeoImage.o:	src/structures/GeoImage.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(GDAL_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(GDAL_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/GDAL2OpenCV.o: src/utilities/GDAL2OpenCV.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(GDAL_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(GDAL_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/OpenCVUtils.o: src/utilities/OpenCVUtils.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/GDAL_Data.o:  src/structures/GDAL_Data.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(GDAL_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(GDAL_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/NITFHeader.o: src/structures/NITFHeader.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/GeoHeader.o: src/structures/GeoHeader.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(BOOST_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(BOOST_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/PixelType.o: src/structures/PixelType.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/UInt16.o: src/structures/UInt16.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 build/UInt8.o: src/structures/UInt8.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS)
+	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(CFLAGS) $(GEO_INCLUDE)
 
 
 ###################################################################
@@ -83,4 +114,15 @@ clean:
 	rm -r build/*.o
 	rm unit_test
 
+check:
+	g++ -o build/unit_test unit_test.cpp $(OPENCV) $(TEST_SOURCES) -I$(PREFIX)/include/geoimage -L$(PREFIX)/lib -lgeoimage 
+
+install:
+	mkdir -p $(PREFIX)
+	mkdir -p $(PREFIX)/bin
+	mkdir -p $(PREFIX)/lib
+	mkdir -p $(PREFIX)/include
+	cp $(BUILD)/libgeoimage.so $(PREFIX)/lib
+	cp src/structures/*.h $(PREFIX)/include/geoimage
+	cp src/utilities/*.h  $(PREFIX)/include/geoimage
 
