--- a/geographic/Makefile
+++ b/geographic/Makefile
@@ -6,12 +6,12 @@
 # Final Install Destination
 PREFIX = /opt/local
 
-#Build directory   (DO NOT TOUCH -fpic)
+#Build directory   (DO NOT TOUCH -fPic)
 BUILD = build
 
 # Build flags 
-CFLAGS = -Wall -fpic
-DFLAGS = $(CFLAGS) -g
+CFLAGS = -Wall 
+DFLAGS = $(CFLAGS) -O0 -g
 OFLAGS = $(CFLAGS) -O3
 
 #
@@ -57,8 +57,11 @@ TEST = $(TEST_INCLUDE) $(TEST_SOURCES)
 HEADERS = src/structures/*.h \
 	  	   src/utilities/*.h
 
-OBJECTS       = build/GeoImage.o        build/GDAL2OpenCV.o  	   build/OpenCVUtils.o  	  build/GDAL_Data.o  	   build/NITFHeader.o  	     build/GeoHeader.o		  build/PixelType.o
-OBJECTS_DEBUG = build/GeoImage_DEBUG.o  build/GDAL2OpenCV_DEBUG.o  build/OpenCVUtils_DEBUG.o  build/GDAL_Data_DEBUG.o  build/NITFHeader_DEBUG.o  build/GeoHeader_DEBUG.o  build/PixelType_DEBUG.o
+OBJECTS       = build/PixelType.o		 build/OpenCVUtils.o
+OBJECTS_DEBUG = build/PixelType_DEBUG.o  build/OpenCVUtils_DEBUG.o
+
+#build/GeoImage.o        build/GDAL2OpenCV.o  	   build/OpenCVUtils.o  	  build/GDAL_Data.o  	   build/NITFHeader.o  	     build/GeoHeader.o		  build/PixelType.o
+#build/GeoImage_DEBUG.o  build/GDAL2OpenCV_DEBUG.o  build/OpenCVUtils_DEBUG.o  build/GDAL_Data_DEBUG.o  build/NITFHeader_DEBUG.o  build/GeoHeader_DEBUG.o  build/PixelType_DEBUG.o
 
 GEO_INCLUDE = -Isrc/structures -Isrc/utilities
 
@@ -71,6 +74,7 @@ all: $(BUILD)/libgeoimage.so $(BUILD)/libgeoimage_DEBUG.so
 	mkdir -p $(BUILD)/include/geoimage
 	cp $(BUILD)/libgeoimage.so $(BUILD)/lib
 	cp $(BUILD)/libgeoimage_DEBUG.so $(BUILD)/lib
+	cp src/GeoImage.h	  $(BUILD)/include/GeoImage.h
 	cp src/structures/*.h $(BUILD)/include/geoimage
 	cp src/utilities/*.h  $(BUILD)/include/geoimage
 
@@ -79,10 +83,10 @@ all: $(BUILD)/libgeoimage.so $(BUILD)/libgeoimage_DEBUG.so
 ###################################################################
 # Main Shared Libraries
 $(BUILD)/libgeoimage.so: $(OBJECTS)
-	g++ -o $@ $(OBJECTS) $(GDAL) $(OPENCV) $(BOOST) $(OFLAGS) -shared
+	g++ -o $@ $(OBJECTS)       $(GDAL) $(OPENCV) $(BOOST) $(OFLAGS) -shared
 
-$(BUILD)/libgeoimage_DEBUG.so: $(OBJECTS)
-	g++ -o $@ $(OBJECTS) $(GDAL) $(OPENCV) $(BOOST) $(DFLAGS) -shared
+$(BUILD)/libgeoimage_DEBUG.so: $(OBJECTS_DEBUG)
+	g++ -o $@ $(OBJECTS_DEBUG) $(GDAL) $(OPENCV) $(BOOST) $(DFLAGS) -shared
 
 # GeoImage Core
 build/GeoImage.o:	src/structures/GeoImage.cpp $(HEADERS)
@@ -100,10 +104,10 @@ build/GDAL2OpenCV_DEBUG.o: src/utilities/GDAL2OpenCV.cpp $(HEADERS)
 
 # OpenCV Utilities
 build/OpenCVUtils.o: src/utilities/OpenCVUtils.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(OFLAGS) $(GEO_INCLUDE)
+	g++ -fPIC $< -c -o $@ $(OPENCV_INCLUDE) $(OFLAGS) $(GEO_INCLUDE)
 
 build/OpenCVUtils_DEBUG.o: src/utilities/OpenCVUtils.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(DFLAGS) $(GEO_INCLUDE)
+	g++ -fPIC $< -c -o $@ $(OPENCV_INCLUDE) $(DFLAGS) $(GEO_INCLUDE)
 
 # GDAL_Data
 build/GDAL_Data.o:  src/structures/GDAL_Data.cpp $(HEADERS)
@@ -127,11 +131,11 @@ build/GeoHeader_DEBUG.o: src/structures/GeoHeader.cpp $(HEADERS)
 	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(BOOST_INCLUDE) $(DFLAGS) $(GEO_INCLUDE)
 
 # PixelType
-build/PixelType.o: src/structures/PixelType.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(OFLAGS) $(GEO_INCLUDE)
+build/PixelType.o: 		 src/structures/PixelType.cpp $(HEADERS)
+	g++ -fPIC $< -c -o $@ $(OPENCV_INCLUDE) $(OFLAGS) $(GEO_INCLUDE)
 
 build/PixelType_DEBUG.o: src/structures/PixelType.cpp $(HEADERS)
-	g++ $< -c -o $@ $(OPENCV_INCLUDE) $(DFLAGS) $(GEO_INCLUDE)
+	g++ -fPIC $< -c -o $@ $(OPENCV_INCLUDE) $(DFLAGS) $(GEO_INCLUDE) 
 
 
 
@@ -149,7 +153,7 @@ clean:
 	rm unit_test
 
 check:
-	g++ -o build/unit_test unit_test.cpp $(OPENCV) $(TEST_SOURCES) -I$(PREFIX)/include/geoimage -L$(PREFIX)/lib -lgeoimage_DEBUG $(DFLAGS)
+	g++ -o build/unit_test unit_test.cpp TEST_structures.cpp $(OPENCV) $(TEST_SOURCES) -I/opt/local/include -L/opt/local/lib -lgeoimage
 	./build/unit_test
 
 install:
@@ -159,5 +163,7 @@ install:
 
 uninstall:
 	rm -r $(PREFIX)/lib/libgeoimage.so
+	rm -r $(PREFIX)/lib/libgeoimage_DEBUG.so
+	rm -r $(PREFIX)/include/GeoImage.h
 	rm -r $(PREFIX)/include/geoimage
 
