--- a/geographic/docs/examples/Makefile
+++ b/geographic/docs/examples/Makefile
@@ -1,2 +1,7 @@
 hello_geoworld: hello_geoworld.cpp
 	g++ hello_geoworld.cpp -o hello_geoworld `pkg-config opencv --cflags --libs` -I/opt/local/include -L/opt/local/lib -lgeoimage
+	
+example02: example02.cpp	
+	g++ example02.cpp -o example02 `pkg-config opencv --cflags --libs` -I/opt/local/include -L/opt/local/lib -lgeoimage
+
+
